// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`receivers adding receivers should be able to add a new Alertmanager receiver 1`] = `
{
  "alertmanager_config": {
    "receivers": [
      {
        "email_configs": [
          {
            "to": "address@domain.com",
          },
        ],
        "grafana_managed_receiver_configs": [],
        "name": "new contact point",
      },
    ],
  },
  "template_files": {},
}
`;

exports[`receivers adding receivers should be able to add a new Grafana Alertmanager receiver 1`] = `
{
  "alertmanager_config": {
    "receivers": [
      {
        "email_configs": [],
        "grafana_managed_receiver_configs": [
          {
            "disableResolveMessage": false,
            "name": "emea-oncall",
            "settings": {
              "url": "https://oncall.example.com",
            },
            "type": "oncall",
          },
        ],
        "name": "another contact point",
      },
    ],
  },
  "template_files": {},
}
`;

exports[`receivers should delete a receiver 1`] = `
{
  "alertmanager_config": {
    "receivers": [
      {
        "name": "another receiver",
      },
    ],
  },
  "template_files": {},
}
`;

exports[`receivers updating receivers should allow renaming a receiver and update routes 1`] = `
{
  "alertmanager_config": {
    "receivers": [
      {
        "email_configs": [],
        "grafana_managed_receiver_configs": [],
        "name": "receiver 2",
      },
    ],
    "route": {
      "receiver": "receiver 2",
      "routes": [
        {
          "receiver": "receiver 2",
        },
      ],
    },
  },
  "template_files": {},
}
`;

exports[`receivers updating receivers should allow updating an existing receiver 1`] = `
{
  "alertmanager_config": {
    "receivers": [
      {
        "email_configs": [
          {
            "to": "address+1@domain.com",
          },
        ],
        "grafana_managed_receiver_configs": [],
        "name": "existing receiver",
      },
    ],
  },
  "template_files": {},
}
`;
